[package]
name = "pallet-ibc"
version = "0.1.0"
authors = ["Yuanchao Sun <ys@cdot.network>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.2.0", default-features = false }
finality-grandpa = { version = "0.11.1", features = ["derive-codec"], default-features = false }
hash-db = { version = "0.15.2", default-features = false }
serde = { version = "1.0.101", optional = true }

frame-support = { path = "../../../substrate/frame/support", default-features = false }
sp-core = { path = "../../../substrate/primitives/core", default-features = false }
sp-finality-grandpa = { path = "../../../substrate/primitives/finality-grandpa", default-features = false }
sp-runtime = { path = "../../../substrate/primitives/runtime", default-features = false }
sp-std = { path = "../../../substrate/primitives/std", default-features = false }
sp-trie = { path = "../../../substrate/primitives/trie", default-features = false }
system = { package = "frame-system", path = "../../../substrate/frame/system", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"finality-grandpa/std",
	"hash-db/std",
	"serde",
	"frame-support/std",
	"sp-core/std",
	"sp-finality-grandpa/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-trie/std",
	"system/std",
]
