[package]
name = "pallet-ibc"
version = "0.1.0"
authors = ["Yuanchao Sun <ys@cdot.network>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false }
support = { package = "frame-support", path = "../../../substrate/frame/support", default-features = false }
system = { package = "frame-system", path = "../../../substrate/frame/system", default-features = false }
balances = { package = "pallet-balances", path = "../../../substrate/frame/balances", default-features = false }
sp-runtime = { path = "../../../substrate/primitives/sr-primitives", default-features = false }
rstd = { package = "sp-std", path = "../../../substrate/primitives/sr-std", default-features = false }
runtime-io = { package = "sp-io", path = "../../../substrate/primitives/sr-io", default-features = false }

[dev-dependencies]
primitives = { package = "sp-core", path = "../../../substrate/primitives/core" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-runtime/std",
	"support/std",
	"system/std",
	"balances/std",
	"runtime-io/std",
	"rstd/std"
]
