[package]
name = "pallet-ibc"
version = "0.1.0"
authors = ["Yuanchao Sun <ys@cdot.network>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false }
frame-support = { path = "../../../substrate/frame/support", default-features = false }
system = { package = "frame-system", path = "../../../substrate/frame/system", default-features = false }
balances = { package = "pallet-balances", path = "../../../substrate/frame/balances", default-features = false }
sp-core = { path = "../../../substrate/primitives/core", default-features = false }
sp-finality-grandpa = { path = "../../../substrate/primitives/finality-grandpa", default-features = false }
sp-runtime = { path = "../../../substrate/primitives/runtime", default-features = false }
sp-std = { path = "../../../substrate/primitives/std", default-features = false }
sp-state-machine = { path = "../../../substrate/primitives/state-machine", default-features = false }
finality-grandpa = { version = "0.11.1", features = ["derive-codec"], default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-runtime/std",
	"frame-support/std",
	"system/std",
	"balances/std",
	"sp-std/std",
	"sp-finality-grandpa/std",
	"finality-grandpa/std",
	"sp-core/std"
]
